# DAI-Image-Renderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
src/config/: config.cpp  config.h
src/grpc/clients/behavior_recognition/: behavior_recognition_client.cpp  behavior_recognition_client.h
src/grpc/clients/image_harmony/: image_harmony_client.cpp  image_harmony_client.h
src/grpc/clients/target_detection/: target_detection.cpp  target_detection.h  target_detection_client.cpp  target_detection_client.h
src/grpc/clients/target_tracking/: target_tracking_client.cpp  target_tracking_client.h
src/grpc/servers/image_renderer/: image_renderer_server.cpp  image_renderer_server.h
src/grpc/servers/service_coordinator/: service_coordinator_server.cpp
src/task_manager/: task_manager.cpp  task_manager.h
